# pyAMaFiL

./: .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  pyAMaFiL.pyproj  pyAMaFiL.sln  pyinit.cpp  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
.ipynb_checkpoints/: .gitignore
examples/: .gitignore  run_example.py
src/: mag_field_wrapper.py
src/pyAMaFiL/: __init__.py  mag_field_lin_fff.py  mag_field_proc.py  mag_field_wrapper.py
