[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyAMaFiL"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "sunpy",
    'importlib-metadata; python_version>="3.10"',
]

[tool.cibuildwheel]
skip = ["cp36*", "cp37*", "cp38*", "cp39*", "pp*", "*musl*"]
build-frontend = "default"

[[tool.cibuildwheel.overrides]]
select = "cp*"
manylinux-x86_64-image = "manylinux_2_28"


[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
